--- a/Estilos.css
+++ b/Estilos.css
@@ -1,29 +1,31 @@
 .chatbot-container {
   background-color: #ffffff;
-  border: 10px solid #372d91;
+  border: 10px solid #1900ff;
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgb(177, 177, 177);
   margin: 50px auto;
   max-width: 1200px;
-  height: 500px; /* Se aumentó la altura del contenedor del chatbot */
+  height: 465px; 
   padding: 25px;
   font-family: 'Anton', sans-serif;
 }
 
 .chatlog {
   height: 500px; /* Se aumentó la altura del chatlog */
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
-/* Resto del código sin cambios */
+
+
 .chat-message {
-  background-color: #e8f0e8;
+  background-color: #ffffff;
   border-radius: 5px;
   padding: 5px;
   margin: 5px 0;
-  width: 420px;
-  height: 20px;
+  width: 100%;
+  min-height: 20px;
 }
+
 
 .chat-message strong {
   color: #383838;
@@ -37,20 +39,21 @@
 
 .input-box {
   font-size: 20px;
-  width: 100%;
+  width: 90%;
   box-sizing: border-box;
   padding: 8px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 7px;
   margin-bottom: 6px;
+  bottom: -40;
 }
 
 
 
 .enviar-btn {
   background-color: #ffffff;
-  background-image: url('EnviarICON.png'); 
-  background-size: 35px;
+  background-image: url('img/EnviarICON.png'); 
+  background-size: 40px;
   background-position: center center;
   background-repeat: no-repeat;
   border: none;
@@ -60,7 +63,7 @@
   font-size: 16px;
   padding: 10px;
   transition: background-color 0.3s ease;
-  width: 20%;
+  width: 40%;
 }
 
 .enviar-btn:hover {
@@ -93,13 +96,14 @@
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgb(177, 177, 177);
   margin: 50px auto;
-  max-width: 800px;
+  max-width: 1000px;
   padding: 20px;
   position: fixed;
-  bottom: 0;
+  bottom: -48px; /* Cambiar el valor para ajustar la posición vertical */
   left: 50%;
   transform: translateX(-50%);
 }
+
 
 
 @media (max-width: 768px) {
@@ -109,7 +113,8 @@
     padding: 10px;
     border: 5px solid #372d91;
     border-radius: 10px;
-    height: 700px;
+    height: 500px;
+    
   }
   
   .input-container {
@@ -124,7 +129,8 @@
   }
   
   .enviar-btn {
-    width: 10%;
+    width: 50%;
+    height: 80%;
   }
   
   .icon {
@@ -233,8 +239,20 @@
   background-color: #ffffff;
   color: #372d91;
 
- 
-  
+
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.chat-message {
+  animation: fade-in 4.0s ease;
 }
 
 
