--- a/Estilos.css
+++ b/Estilos.css
@@ -52,7 +52,7 @@
 
 .enviar-btn {
   background-color: #ffffff;
-  background-image: url('img/EnviarICON.png'); 
+  background-image: url('EnviarICON.png'); 
   background-size: 40px;
   background-position: center center;
   background-repeat: no-repeat;
